<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ATAProject</string>
    <string name="titleVehicleDetail">My Vehicle Detail</string>
    <string name="my_other_vehicle">My Other Vehicle</string>
    <string name="vehicleDetail">Vehicle Detail</string>
    <string name="vehicleAccident">Vehicle Accident</string>
    <string name="vehicleServicing">Vehicle Servicing</string>
    <string name="contactFTAFleet">Contact FTA Fleet</string>
    <string name="accidentDetail">Accident Details</string>
    <string name="myVehicleDetail">My Vehicle Details</string>
    <string name="addOtherVehicleDetails">Add Other Vehicle Details</string>
    <string name="witnesses">Witnesses</string>
    <string name="police">Police</string>
    <string name="otherVehicle">Other Vehicle</string>
    <string name="addWitness">Add Witness</string>
    <string name="myWitness">My Witness</string>
    <string name="witnessesDetail">Witnesses Detail</string>
    <string name="photoList">Photo List</string>
    <string name="ataFleetTow">ATA FLeet Tow</string>
    <string name="needHelpNow">Need Help Now ?</string>
    <string name="bookServices">Book Services</string>
    <string name="enter_your_details_before">Enter your details before</string>
    <string name="enter_your_details_driving">driving vehicle</string>
    <string name="add_vehicle">Add Vehicles</string>
    <string name="my_vehicle">My Vehicle</string>
    <string name="name">NAME</string>
    <string name="rego">REGO#</string>
    <string name="make">MAKE</string>
    <string name="model">MODEL</string>
    <string name="phone">PHONE</string>
    <string name="address">ADDRESS</string>
    <string name="rego_date">REGO DATE</string>
    <string name="insurance_detail">MY INSURANCE DETAILS</string>
    <string name="insurance_company">INSURANCE COMPANY</string>
    <string name="policy">POLICY</string>
    <string name="insurance_phone">INSURANCE PHONE</string>
    <string name="broker">BROKER (if any)</string>
    <string name="rego_reminder">Rego Reminder</string>
    <string name="rego_renewal_date">Rego Renewal Date</string>
    <string name="select_date">SELECT DATE</string>
    <string name="enter_your_rego">Enter your Rego Date Well remind you when the date is close by.</string>
    <string name="save">Save</string>
    <string name="select">Select</string>
    <string name="delete">Delete</string>
    <string name="photo">Photo</string>
    <string name="map_location">Map Location</string>
    <string name="ata_fleet">ATA Fleet</string>
    <string name="address_location">81 Kurrajong Ave Mt Druitt NSW</string>
    <string name="number_house">2770</string>
    <string name="phone_number">Free Call: 1800 633 990</string>
    <string name="email_repairer">Email Repairer</string>
    <string name="sms_ata">SMS ATA</string>
    <string name="dial_now">Dial Now</string>
    <string name="get_direction">Get Direction</string>

    <string name="involved_accident">Involved in Accident ?</string>
    <string name="call_for_tow">Call for Tow</string>
    <string name="call_to">Call 000</string>
    <string name="add_other_vehicle">Add Other Vehicle</string>
    <string name="other_vehicle">Other Vehicle</string>
    <string name="enter_note_about_your_vehicle">ENTER NOTE ABOUT YOUR VEHICLE</string>
    <string name="other_work">Other Work</string>


</resources>
