<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_header_2x">
        <ImageView
                android:layout_marginLeft="@dimen/_5dp"
                android:id="@+id/add_other_vehicle_form_btBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_back_2x"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/add_other_vehicle"
                style="@style/text_while"
                />
    </RelativeLayout>
    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <LinearLayout android:layout_height="wrap_content"
                      android:layout_width="match_parent"
                      android:layout_marginTop="@dimen/_15dp"
                      android:layout_marginLeft="@dimen/_5dp"
                      android:layout_marginRight="@dimen/_5dp"
                      android:orientation="vertical">
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:id="@+id/add_other_vehicle_form_etName"
                    android:background="@drawable/bg_edit_text"
                    style="@style/text_while"
                    android:layout_gravity="center_horizontal|top"/>

            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7dp"
                    android:text="@string/rego"
                    android:id="@+id/add_other_vehicle_form_etRego"
                    android:background="@drawable/bg_edit_text"
                    style="@style/text_while"
                    android:layout_gravity="center_horizontal|top"/>

            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7dp"
                    android:text="@string/make"
                    android:id="@+id/add_other_vehicle_form_etMake"
                    android:background="@drawable/bg_edit_text"
                    style="@style/text_while"
                    android:layout_gravity="center_horizontal|top"/>

            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7dp"
                    android:text="@string/model"
                    android:id="@+id/add_other_vehicle_form_etModel"
                    android:background="@drawable/bg_edit_text"
                    style="@style/text_while"
                    android:layout_gravity="center_horizontal|top"/>

            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7dp"
                    android:text="@string/phone"
                    android:id="@+id/add_other_vehicle_form_etPhone"
                    android:background="@drawable/bg_edit_text"
                    style="@style/text_while"
                    android:layout_gravity="center_horizontal|top"/>

            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7dp"
                    android:text="@string/address"
                    android:id="@+id/add_other_vehicle_form_etAddress"
                    android:background="@drawable/bg_edit_text"
                    style="@style/text_while"
                    android:layout_gravity="center_horizontal|top"/>

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:layout_marginBottom="@dimen/_20dp"
                    android:text="@string/insurance_detail"
                    android:id="@+id/add_other_vehicle_form_tvInsuranceDetail"
                    style="@style/text_while"
                    android:layout_gravity="center_horizontal|top"/>

            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7dp"
                    android:text="@string/insurance_company"
                    android:id="@+id/add_other_vehicle_form_etInsuranceCompany"
                    android:background="@drawable/bg_edit_text"
                    style="@style/text_while"
                    android:layout_gravity="center_horizontal|top"/>

            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7dp"
                    android:text="@string/policy"
                    android:id="@+id/add_other_vehicle_form_etPolicy"
                    android:background="@drawable/bg_edit_text"
                    style="@style/text_while"
                    android:layout_gravity="center_horizontal|top"/>

            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7dp"
                    android:text="@string/insurance_phone"
                    android:id="@+id/add_other_vehicle_form_etInsurancePhone"
                    android:background="@drawable/bg_edit_text"
                    style="@style/text_while"
                    android:layout_gravity="center_horizontal|top"/>

            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7dp"
                    android:text="@string/broker"
                    android:id="@+id/add_other_vehicle_form_etBroker"
                    android:background="@drawable/bg_edit_text"
                    style="@style/text_while"
                    android:layout_gravity="center_horizontal|top"/>

            <RelativeLayout
                    android:layout_marginBottom="@dimen/_50dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7dp"
                    android:background="@drawable/bg_edit_text"
                    >
                <Button
                        android:layout_centerInParent="true"
                        android:layout_width="@dimen/_280dp"
                        android:text="@string/save"
                        android:id="@+id/add_other_vehicle_form_btSave"
                        android:background="@drawable/background_bt_blue"
                        android:layout_marginBottom="@dimen/_20dp"
                        style="@style/text_while"
                        android:layout_height="wrap_content"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>