<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_header_2x"
            >
        <ImageView
                android:layout_marginLeft="@dimen/_5dp"
                android:id="@+id/vehicle_detail_btBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_back_2x"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/rego_reminder"
                style="@style/text_while"
                />
    </RelativeLayout>
    <TextView
            android:layout_marginTop="@dimen/_50dp"
            android:layout_width="@dimen/_160dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:text="@string/rego_renewal_date"
            style="@style/text_while"
            android:textSize="@dimen/_16dp"
            />

    <Button
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_40dp"
            android:text="@string/select_date"
            android:id="@+id/rego_remind_btSelectDate"
            android:background="@drawable/back_ground_bt_blue_2x"
            style="@style/text_while"
            android:layout_height="wrap_content"/>
    />

    <TextView
            android:layout_marginTop="@dimen/_50dp"
            android:layout_width="@dimen/_280dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:text="@string/enter_your_rego"
            style="@style/text_while"
            android:textSize="@dimen/_16dp"
            />

    <Button
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_50dp"
            android:text="@string/save"
            android:id="@+id/rego_remind_btSave"
            android:background="@drawable/back_ground_bt_blue_2x"
            style="@style/text_while"
            android:layout_height="wrap_content"/>
    />


</LinearLayout>