<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_header_2x"
            >
        <ImageView
                android:layout_marginLeft="@dimen/_5dp"
                android:id="@+id/other_work_btBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_back_2x"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/other_work"
                style="@style/text_while"
                />
    </RelativeLayout>
    <TextView
            android:layout_marginTop="@dimen/_30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:text="@string/enter_note_about_your_vehicle"
            style="@style/text_while"
            android:textSize="@dimen/_18dp"
            />

    <EditText android:layout_width="match_parent"
              android:id="@+id/other_work_etNote"
              android:layout_height="@dimen/_160dp"
              android:layout_marginTop="@dimen/_20dp"
              android:layout_marginLeft="@dimen/_20dp"
              android:layout_marginRight="@dimen/_20dp"/>
    <Button
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/save"
            android:id="@+id/other_work_btSave"
            android:background="@drawable/back_ground_bt_blue_2x"
            style="@style/text_while"
            android:layout_height="wrap_content"/>

</LinearLayout>