<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_header_2x"
            >
        <ImageView
                android:layout_marginLeft="@dimen/_5dp"
                android:id="@+id/vehicle_detail_btBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_back_2x"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/titleVehicleDetail"
                style="@style/text_while"
                />
    </RelativeLayout>
    <TextView
            android:layout_marginTop="@dimen/_30dp"
            android:layout_width="@dimen/_260dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:text="@string/enter_your_details"
            style="@style/text_while"
            />

    <TextView
            android:layout_marginTop="@dimen/_20dp"
            android:layout_height="@dimen/_4dp"
            android:layout_width="match_parent"
            android:background="@drawable/line"/>

    <Button
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_40dp"
            android:text="@string/add_vehicle"
            android:id="@+id/vehicle_detail_btAddVehicle"
            android:background="@drawable/back_ground_bt_blue_2x"
            style="@style/text_while"
            android:layout_height="wrap_content"/>
    <Button
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/my_vehicle"
            android:id="@+id/vehicle_detail_btViewVehicleDetail"
            android:background="@drawable/back_ground_bt_blue_2x"
            style="@style/text_while"
            android:layout_height="wrap_content"/>

</LinearLayout>